first refresh of project commit